Contrast color issue addressed

--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -137,7 +137,7 @@ button {
 
 /* Footer */
 footer {
-    background-color: var(--rich-expresso);
+    background-color: var(--deep-burgundy);
     padding: 1rem 10px;
     text-align: center;
     border-radius: 10px;
